# vibe_winshell_splitrs

./: Cargo.toml  fix_fn2pub11.py  fix_fn2pub4.py  fix_fn2pub6.py  fix_fn2pub9.py
scripts/: fix_fn2pub10.py  fix_fn2pub3.py  fix_fn2pub5.py  fix_fn2pub7.py  fix_fn2pub8.py
src/ws/: processmanagerapp_apply_theme_group.rs  processmanagerapp_execute_command_group.rs  processmanagerapp_export_files_to_csv_group.rs  processmanagerapp_export_network_to_csv_group.rs  processmanagerapp_export_processes_to_csv_group.rs  processmanagerapp_format_memory_group.rs  processmanagerapp_format_time_group.rs  processmanagerapp_is_user_admin_group.rs  processmanagerapp_load_config_group.rs  processmanagerapp_redo_last_action_group.rs  processmanagerapp_refresh_all_data_group.rs  processmanagerapp_restart_as_admin_group.rs  processmanagerapp_save_all_tabs_group.rs  processmanagerapp_show_file_list_group.rs  processmanagerapp_show_filepane_view_group.rs  processmanagerapp_show_files_network_view_group.rs  processmanagerapp_show_font_picker_group.rs  processmanagerapp_show_kill_confirm_dialog_group.rs  processmanagerapp_show_live_view_group.rs  processmanagerapp_show_logs_view_group.rs  processmanagerapp_show_network_list_group.rs  processmanagerapp_show_new_program_launcher_group.rs  processmanagerapp_show_process_list_group.rs  processmanagerapp_show_settings_view_group.rs  processmanagerapp_show_taskbar_view_group.rs  processmanagerapp_show_windows_view_group.rs  processmanagerapp_sort_files_group.rs  processmanagerapp_sort_network_group.rs  processmanagerapp_sort_processes_group.rs  (+3 more)
