[package]
name = "vibe_winshell"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
sysinfo = "0.32"
chrono = "0.4"
csv = "1.3"
dirs = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
]}

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "winshell"
path = "src/main.rs"
